# xevtest

./: .gitignore  CMakeLists.txt  README.md  flake.nix
src/: xevtest.cpp  xmousetest.cpp
